[package]
name = "rslogd"
version = "0.4.0"
authors = ["Tom Pusateri <pusateri@bangj.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
socket2 = { version = "0.3.9", features = ["reuseport"] }
mio = "^0.6"
chrono = "0.4.6"
rustls = "0.15.2"
docopt = "~1.0"
serde_derive = "1.0"
serde = "1.0"
index-pool = "1.0"
